CHATS_SIT/force-app/main/default/objects/T_SBSD_EMPLMT_EXP__c.object
<CustomObject>
    <description>Employment expenses</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>AMT_EXP__c</fullName>
        <description>Expense Amount</description>
        <label>Expense Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_EXP__c</fullName>
        <description>Expense Frequency</description>
        <label>Expense Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00325</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_EXP__c</fullName>
        <description>How Verified</description>
        <label>How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00746</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIFY__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Yearly_Expense__c</fullName>
        <formula>CASE( TEXT( CDE_FREQ_EXP__c ) , 
&apos;WKY&apos;, AMT_EXP__c*4.33*12, 
&apos;E2M&apos;, AMT_EXP__c*6,
&apos;2PM&apos;, AMT_EXP__c*2*12, 
&apos;E2W&apos;, (AMT_EXP__c/2)*4.33*12, 
&apos;MON&apos;, AMT_EXP__c*12, 
&apos;QRT&apos;, (AMT_EXP__c/3)*12, 
&apos;2PY&apos;, AMT_EXP__c*2, 
&apos;1PY&apos;, AMT_EXP__c, 
&apos;ONE&apos;, AMT_EXP__c, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Yearly Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_EXP__c</fullName>
        <description>Expense Date</description>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_EMPLMT_INDIV__c</fullName>
        <label>Employment ID</label>
        <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
        <relationshipLabel>Employment Expense</relationshipLabel>
        <relationshipName>Employment_Expense</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employment Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Expense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EffectiveEndDateCannotBeGreaterBeginDate</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be Prior to Effective Begin Date</errorMessage>
    </validationRules> 
    <validationRules>
        <fullName>Exp_RcrdsCrtd_only_for_RecType_SE</fullName>
        <active>true</active>
        <description>Records can only be created for the Self-Employment record type of Object Employment</description>
        <errorConditionFormula>AND(NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ),NOT( ISBLANK(IDN_EMPLMT_INDIV__c) ),
   IDN_EMPLMT_INDIV__r.RecordType.Name &lt;&gt; &quot;Self-Employment&quot;
)</errorConditionFormula>
        <errorMessage>Records can only be created for the Self-Employment record type of Object Employment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expense_Amount_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Expense Amount cannot be less than 0</description>
        <errorConditionFormula>NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; AMT_EXP__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AMT_EXP__c</errorDisplayField>
        <errorMessage>Expense Amount cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Verif_Src_Exp_If_VerifType_Writn</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ), ISPICKVAL(CDE_TYPE_VERIFY__c, &quot;V&quot;) , ISBLANK( TEXT(CDE_SOURCE_VRFYD_EXP__c) ) )</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_EXP__c</errorDisplayField>
        <errorMessage>This Field is required for Verification Type is &apos;Written Verification&apos;.</errorMessage>
    </validationRules>
</CustomObject>