CHATS_SIT/force-app/main/default/objects/T_SBSD_EMPLMT_EXP__c/validationRules/EffectiveEndDateCannotBeGreaterBeginDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveEndDateCannotBeGreaterBeginDate</fullName>
    <active>true</active>
    <errorConditionFormula>DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date cannot be Prior to Effective Begin Date</errorMessage>
</ValidationRule>