CHATS_SIT/force-app/main/default/objects/T_SBSD_EMPLMT_EXP__c/validationRules/Exp_RcrdsCrtd_only_for_RecType_SE.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_RcrdsCrtd_only_for_RecType_SE</fullName>
    <active>true</active>
    <description>Records can only be created for the Self-Employment record type of Object Employment</description>
    <errorConditionFormula>AND(NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ),NOT( ISBLANK(IDN_EMPLMT_INDIV__c) ),
   IDN_EMPLMT_INDIV__r.RecordType.Name &lt;&gt; &quot;Self-Employment&quot;
)</errorConditionFormula>
    <errorMessage>Records can only be created for the Self-Employment record type of Object Employment</errorMessage>
</ValidationRule>