CHATS_SIT/force-app/main/default/objects/T_SBSD_EMPLMT_EXP__c/validationRules/Expense_Amount_cannot_be_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Amount_cannot_be_less_than_0</fullName>
    <active>true</active>
    <description>Expense Amount cannot be less than 0</description>
    <errorConditionFormula>NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; AMT_EXP__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AMT_EXP__c</errorDisplayField>
    <errorMessage>Expense Amount cannot be less than 0</errorMessage>
</ValidationRule>