CHATS_SIT/force-app/main/default/objects/T_SBSD_EMPLMT_EXP__c/validationRules/Require_Verif_Src_Exp_If_VerifType_Writn.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Verif_Src_Exp_If_VerifType_Writn</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c ), ISPICKVAL(CDE_TYPE_VERIFY__c, &quot;V&quot;) , ISBLANK( TEXT(CDE_SOURCE_VRFYD_EXP__c) ) )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_EXP__c</errorDisplayField>
    <errorMessage>This Field is required for Verification Type is &apos;Written Verification&apos;.</errorMessage>
</ValidationRule>